{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 15,
  "lineage": "d78989f7-e4ed-c3a8-0cc5-bb4f7a363845",
  "resources": [
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:026090548914:internet-gateway/igw-08e9bd31feefece4e",
            "id": "igw-08e9bd31feefece4e",
            "owner_id": "026090548914",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0423a5ba9fde43fd3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0989ffde69318c71f",
            "arn": "arn:aws:ec2:eu-west-1:026090548914:elastic-ip/eipalloc-0989ffde69318c71f",
            "domain": "vpc",
            "id": "eipalloc-0989ffde69318c71f",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-74-126-250.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.74.126.250",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT_EIP"
            },
            "tags_all": {
              "Name": "NAT_EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0989ffde69318c71f",
            "association_id": "eipassoc-04ac3565142bee2fd",
            "connectivity_type": "public",
            "id": "nat-02b225639f0159840",
            "network_interface_id": "eni-0d35b5f8543bf2f4b",
            "private_ip": "10.0.1.187",
            "public_ip": "54.74.126.250",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-029dfcd7dee095ea8",
            "tags": {
              "Name": "main-nat"
            },
            "tags_all": {
              "Name": "main-nat"
            }
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.nat_gateway.aws_eip.nat_ip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:026090548914:route-table/rtb-0d4cdad266a80110c",
            "id": "rtb-0d4cdad266a80110c",
            "owner_id": "026090548914",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02b225639f0159840",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-route-table"
            },
            "tags_all": {
              "Name": "main-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0423a5ba9fde43fd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.nat_gateway.aws_eip.nat_ip",
            "module.nat_gateway.aws_nat_gateway.nat_gw",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:026090548914:route-table/rtb-033d220ef6da0ee69",
            "id": "rtb-033d220ef6da0ee69",
            "owner_id": "026090548914",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08e9bd31feefece4e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-route-table"
            },
            "tags_all": {
              "Name": "main-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0423a5ba9fde43fd3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_az1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044005ff0ecd9dcaa",
            "route_table_id": "rtb-0d4cdad266a80110c",
            "subnet_id": "subnet-0b00d838e3b5cbe13"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.nat_gateway.aws_eip.nat_ip",
            "module.nat_gateway.aws_nat_gateway.nat_gw",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private_az2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b4dd3a2e7d5c5f1e",
            "route_table_id": "rtb-0d4cdad266a80110c",
            "subnet_id": "subnet-0aa22263d44d80f30"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.nat_gateway.aws_eip.nat_ip",
            "module.nat_gateway.aws_nat_gateway.nat_gw",
            "module.subnets.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_az1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b9dbac3ecec3eea",
            "route_table_id": "rtb-033d220ef6da0ee69",
            "subnet_id": "subnet-029dfcd7dee095ea8"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_az2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a8a35b933e6392b",
            "route_table_id": "rtb-033d220ef6da0ee69",
            "subnet_id": "subnet-054fbe3472b73c3d4"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw",
            "module.subnets.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:026090548914:subnet/subnet-0b00d838e3b5cbe13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b00d838e3b5cbe13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026090548914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private_az1"
            },
            "tags_all": {
              "Name": "main-private_az1"
            },
            "vpc_id": "vpc-0423a5ba9fde43fd3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private_az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:026090548914:subnet/subnet-0aa22263d44d80f30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa22263d44d80f30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026090548914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private_az2"
            },
            "tags_all": {
              "Name": "main-private_az2"
            },
            "vpc_id": "vpc-0423a5ba9fde43fd3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:026090548914:subnet/subnet-029dfcd7dee095ea8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029dfcd7dee095ea8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026090548914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public_az1"
            },
            "tags_all": {
              "Name": "main-public_az1"
            },
            "vpc_id": "vpc-0423a5ba9fde43fd3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public_az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:026090548914:subnet/subnet-054fbe3472b73c3d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054fbe3472b73c3d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026090548914",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-public_az2"
            },
            "tags_all": {
              "Name": "main-public_az2"
            },
            "vpc_id": "vpc-0423a5ba9fde43fd3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:026090548914:vpc/vpc-0423a5ba9fde43fd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ba0d677967f62cc",
            "default_route_table_id": "rtb-012d036e04b0d9004",
            "default_security_group_id": "sg-094bee1546b65a61e",
            "dhcp_options_id": "dopt-0783649ff3de8db44",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0423a5ba9fde43fd3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-012d036e04b0d9004",
            "owner_id": "026090548914",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}